--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL Build.loader.js";
+      var loaderUrl = buildUrl + "/NewDotToDot_Demo.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL Build.data",
-        frameworkUrl: buildUrl + "/WebGL Build.framework.js",
-        codeUrl: buildUrl + "/WebGL Build.wasm",
+        dataUrl: buildUrl + "/NewDotToDot_Demo.data",
+        frameworkUrl: buildUrl + "/NewDotToDot_Demo.framework.js",
+        codeUrl: buildUrl + "/NewDotToDot_Demo.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "PonkanSaseme",
         productName: "DotToDotUpgrade",
-        productVersion: "0.3",
+        productVersion: "0.4",
         showBanner: unityShowBanner,
       };
 
